--- a/First-App-Api/Api/appsettings.json
+++ b/First-App-Api/Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection":  "Host=first-app-db-server.postgres.database.azure.com;Port=5432;Database=tasks_service;Username=pgadmin;Password=Postgresadmin1" 
+    "DefaultConnection":  "" 
   },
   "AllowedHosts": "*"
 }
