--- a/First-App-Web/package.json
+++ b/First-App-Web/package.json
@@ -21,6 +21,10 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@ngrx/effects": "^17.2.0",
+    "@ngrx/entity": "^17.2.0",
+    "@ngrx/store": "^17.2.0",
+    "@ngrx/store-devtools": "^17.2.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "primeflex": "^3.3.1",
