--- a/First-App-Api/Api/Api.csproj
+++ b/First-App-Api/Api/Api.csproj
@@ -24,5 +24,8 @@
     <ItemGroup>
       <Folder Include="Controllers\" />
     </ItemGroup>
+    <ItemGroup>
+        <InternalsVisibleTo Include="Tests"/>
+    </ItemGroup>
 
 </Project>
