--- a/First-App-Web/package.json
+++ b/First-App-Web/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "storybook": "ng run First-App-Web:storybook",
+    "build-storybook": "ng run First-App-Web:build-storybook"
   },
   "private": true,
   "dependencies": {
@@ -39,6 +41,13 @@
     "@angular/cli": "^17.3.5",
     "@angular/compiler-cli": "^17.3.0",
     "@angular/localize": "^17.3.0",
+    "@chromatic-com/storybook": "^1.3.4",
+    "@storybook/addon-essentials": "^8.0.10",
+    "@storybook/addon-interactions": "^8.0.10",
+    "@storybook/addon-links": "^8.0.10",
+    "@storybook/angular": "^8.0.10",
+    "@storybook/blocks": "^8.0.10",
+    "@storybook/test": "^8.0.10",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.19",
     "jasmine-core": "~5.1.0",
@@ -49,6 +58,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.38",
     "schematics-scss-migrate": "^2.3.17",
+    "storybook": "^8.0.10",
     "tailwindcss": "^3.4.3",
     "typescript": "~5.4.2"
   }
